# rpxlog

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  example.qmd
R/: extendr-wrappers.R
src/: Makevars  Makevars.win  entrypoint.c  rpxlog-win.def
src/rpxlog_core/: Cargo.toml  README.md
src/rpxlog_core/src/: lib.rs  stdf.rs  txt.rs  txt_new.rs  unit.rs
src/rust/: Cargo.toml
src/rust/src/: ffi.rs  lib.rs
